# mpl_ornaments

./: 404.html  LICENSE  README.md  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md  reference.md
examples/: title1.py
mpl_ornaments/: __init__.py  titles.py
reference/: index.html
site/: index.html
site/reference/: index.html
