[project]
name = 'mpl-ornaments'
version = '0.0.1'
authors = [
    {name = "Francesco Bianconi", email = "bianco@ieee.org"}
]
description = "Small extensions to Matplotlib"
readme = "README.md"
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib >= 3.8.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/bianconif/mpl_ornaments"

[tool.setuptools]
packages = ["mpl_ornaments"]